# tensor-theorem-prover

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
amr_reasoner/: __init__.py  similarity.py
amr_reasoner/normalize/: Skolemizer.py  __init__.py  clause_to_nnf.py  find_unbound_var_names.py  normalize_conjunctions.py  normalize_quantifiers.py  normalize_variables.py  to_cnf.py  to_nnf.py
amr_reasoner/prover/: Goal.py  Proof.py  ProofState.py  ProofStep.py  Prover.py  ResolutionProver.py  SLDProver.py  types.py
amr_reasoner/prover/operations/: recurse.py  resolve.py  substitution.py  unify.py
amr_reasoner/types/: Atom.py  Constant.py  Function.py  Knowledge.py  Predicate.py  Rule.py  Variable.py  __init__.py  connectives.py
amr_reasoner/util/: find_variables_in_terms.py  pick_from_set.py
docs/: conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
docs/api/: logical_types.rst  prover.rst  similarity.rst
src/: lib.rs  test_utils.rs  types.rs
src/prover/: mod.rs  proof.rs  proof_context.rs  proof_stats.rs  proof_step.rs  resolution_prover.rs  similarity_cache.rs
src/prover/operations/: mod.rs  resolve.rs  unify.rs
src/util/: find_variables_in_terms.rs  mod.rs  py_arc_item.rs
tensor_theorem_prover/: __init__.py  similarity.py
tensor_theorem_prover/_rust/: __init__.pyi
tensor_theorem_prover/normalize/: Skolemizer.py  __init__.py  find_unbound_var_names.py  normalize_conjunctions.py  normalize_quantifiers.py  normalize_variables.py  to_cnf.py  to_nnf.py
tensor_theorem_prover/prover/: Proof.py  ProofContext.py  ProofStats.py  ProofStep.py  ProofStepAccumulator.py  ResolutionProver.py  __init__.py
tensor_theorem_prover/prover/operations/: resolve.py  unify.py
tensor_theorem_prover/types/: Atom.py  Constant.py  Function.py  Predicate.py  Term.py  Variable.py  __init__.py  connectives.py
tensor_theorem_prover/util/: find_variables_in_terms.py  pick_from_set.py
tests/: helpers.py  logic.pickle  test_fuzzy_reasoner.py  test_performance.py  test_similarity.py  test_tensor_theorem_prover.py
tests/normalize/: test_clause_to_nnf.py  test_find_unbound_variables.py  test_normalize_conjunctions.py  test_normalize_quantifiers.py  test_normalize_variables.py  test_to_cnf.py  test_to_nnf.py
tests/prover/: test_ResolutionProver.py  test_SLDProver.py
tests/prover/operations/: test_resolve.py  test_substitution.py  test_unify.py
tests/types/: test_connectives.py
tests/util/: test_find_variables_in_terms.py
