[package]
name = "tensor_theorem_prover"
version = "0.14.0"
edition = "2021"

[lib]
name = "tensor_theorem_prover"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.17.3"
rustc-hash = "1.1.0"
regex = "1.7.1"
sugars = "3.0.1"
lazy_static = "1.4.0"
rayon = "1.6.1"
atomic_float = "0.1.0"
dashmap = "5.4.0"

[package.metadata.maturin]
name = "tensor_theorem_prover._rust"

