[tool.poetry]
name = "tensor-theorem-prover"
version = "0.11.1"
description = "Customizable first-order logic theorem prover supporting approximate vector similarity in unification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/chanind/tensor-theorem-prover"
authors = ["David Chanin <chanindav@gmail.com>"]
keywords = ["theorem-proving", "logic", "first-order", "unification", "reasoning"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
numpy = "^1.20.0"
typing-extensions = ">=3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
syrupy = "^3.0.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "tensor_theorem_prover/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
