[tool.poetry]
name = "tensor-theorem-prover"
version = "0.13.7"
description = "Customizable first-order logic theorem prover supporting approximate vector similarity in unification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/chanind/tensor-theorem-prover"
authors = ["David Chanin <chanindav@gmail.com>"]
keywords = ["theorem-proving", "logic", "first-order", "unification", "reasoning"]

[project]
name = "tensor-theorem-prover"
version = "0.13.7"
description = "Customizable first-order logic theorem prover supporting approximate vector similarity in unification"
license = { text = "MIT" }
requires-python = ">=3.8"
readme = "README.md"
repository = "https://github.com/chanind/tensor-theorem-prover"
authors = [
    {name = "David Chanin", email = "<chanindav@gmail.com>"},
]
keywords = ["theorem-proving", "logic", "first-order", "unification", "reasoning"]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^6.0.0"
furo = "^2022.12.7"
mypy = "^0.982"
numpy = "^1.20.0"
syrupy = "^3.0.2"
pytest-cov = "^4.0.0"
pygments = "^2.13.0"
maturin = "^0.14.10"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.semantic_release]
version_variable = [
    "tensor_theorem_prover/__init__.py:__version__",
    "pyproject.toml:version",
    "Cargo.toml:version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "mkdir dist"
commit_subject = "{version} #release"

[tool.maturin]
features = ["pyo3/extension-module"]
